# mlonmcu_validation

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.c
inc/: mlif.h  mlifio.h
script/: dummy.py  helper.py  validate.py  verify.py
src/: mlif.c  mlifio.c  test.c
